# AskStantonAnnotation

./: .env.example  .gitignore  Procfile  README.md  db.sqlite3  main.py  pyproject.toml  railway.json  requirements.txt
accounts/: admin.py  middleware.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/accounts/: dashboard.html  password_change.html
accounts/templates/registration/: login.html
admin/: settings.py
annotation/: settings.py  urls.py
annotation_tool/: README.md  apps.py  models.py  tests.py  urls.py  utils.py  views.py
annotation_tool/templates/annotation_tool/: annotate_item.html  annotate_object.html  index.html  queue_detail.html  queue_list.html
core/: context_processors.py  langfuse_client.py  permissions.py  session_parser.py  tests.py  urls.py  views.py
core/langfuse/: __init__.py  client.py  config.py  exceptions.py  models.py  service.py
core/langfuse/services/: __init__.py  annotation.py  scoring.py  session.py  trace.py
core/management/: __init__.py
core/management/commands/: setup_tool_permissions.py  validate_urls.py
core/migrations/: 0001_initial.py
core/templates/core/: dashboard.html
core/templatetags/: __init__.py  permission_tags.py
experiment/: comments.ipynb  scoring.ipynb  session-trace.ipynb  test.ipynb
plan/: railway-deployment-todo.md  todo.md
session_viewer/: README.md  apps.py  tests.py  urls.py  views.py
session_viewer/templates/session_viewer/: index.html  (+1 more)
templates/: base.html  base_with_sidebar.html
templates/includes/: session_chat_display.html
