[project]
name = "annotation"
version = "0.1.0"
description = "Django app with forced password change on first login"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0",
    "python-dotenv>=1.0.0",
    "dj-database-url>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "whitenoise>=6.0.0",
    "gunicorn>=21.0.0",
]
